# hikari-persist

./: .gitignore  CHANGELOG  LICENSE  README.md  mkdocs.yaml  pyproject.toml
.github/workflows/: build.yml  lint.yml
docs/: index.md  requirements.txt
docs/pages/: lifecycle.md
docs/pages/api/: cache.md  index.md  rule.md
docs/pages/api/backend/: base.md  sqlite.md
docs/pages/api/cached/: base.md  channel.md  guild.md  member.md  message.md  role.md
docs/pages/api/impl/: event.md  iterator.md  query.md
docs/pages/changelog/: 0.1.0a1.md  0.1.0a2.md  0.1.0a3.md  0.1.0a4.md  0.1.0a5.md  index.md
hikaripersist/: __init__.py  cache.py  rule.py
hikaripersist/backend/: __init__.py  base.py  sqlite.py
hikaripersist/cached/: __init__.py  base.py  channel.py  guild.py  member.py  message.py  role.py
hikaripersist/impl/: __init__.py  event.py  iterator.py  query.py
tests/: test_iterator.py  test_rules.py
